tests/ui/sqlite3_version_required_invalid_version.stderr
error[E0080]: evaluation panicked: 308 is earlier than 3.6.8 (the minimum supported version of SQLite)
 --> tests/ui/sqlite3_version_required_invalid_version.rs:4:5
  |
4 | /     sqlite3_match_version! {
5 | |         308 => {
6 | |             println!("feature supported");
... |
9 | |     }
  | |_____^ evaluation of `test_invalid_version::_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `sqlite3_match_version` (in Nightly builds, run with -Z macro-backtrace for more info)
